// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browser.MenuToggleItemTest > Snapshot Tests > TINYMCE-14505: Should match snapshot for a disabled toggle item with an icon and a shortcut > Disabled toggle item with icon and shortcut 1`] = `
<DocumentFragment>
  <div
    class="tox"
  >
    <div
      class="tox-menu tox-collection tox-collection--list"
      role="menu"
    >
      <div
        class="tox-collection__group"
      >
        <div
          aria-checked="false"
          aria-disabled="true"
          aria-haspopup="false"
          aria-keyshortcuts="Ctrl+I"
          class="tox-collection__item tox-collection__item--state-disabled"
          id=":id-0:"
          role="menuitemcheckbox"
          tabindex="-1"
        >
          <div
            class="tox-collection__item-icon"
          >
            <span
              class="tox-icon"
            >
              <svg
                id="checkmark"
              />
            </span>
          </div>
          <div
            class="tox-collection__item-label"
          >
            Disabled
          </div>
          <div
            class="tox-collection__item-accessory"
          >
            Ctrl+I
          </div>
          <div
            class="tox-collection__item-checkmark"
          >
            <span
              class="tox-icon"
            >
              <svg
                id="checkmark"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`browser.MenuToggleItemTest > Snapshot Tests > TINYMCE-14505: Should match snapshot for an active toggle item > Active toggle item 1`] = `
<DocumentFragment>
  <div
    class="tox"
  >
    <div
      class="tox-menu tox-collection tox-collection--list"
      role="menu"
    >
      <div
        class="tox-collection__group"
      >
        <div
          aria-checked="true"
          aria-disabled="false"
          aria-haspopup="false"
          class="tox-collection__item tox-collection__item--enabled tox-collection__item--active"
          id=":id-0:"
          role="menuitemcheckbox"
          tabindex="-1"
        >
          <div
            class="tox-collection__item-label"
          >
            Active
          </div>
          <div
            class="tox-collection__item-checkmark"
          >
            <span
              class="tox-icon"
            >
              <svg
                id="checkmark"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`browser.MenuToggleItemTest > Snapshot Tests > TINYMCE-14505: Should match snapshot for an inactive toggle item > Inactive toggle item 1`] = `
<DocumentFragment>
  <div
    class="tox"
  >
    <div
      class="tox-menu tox-collection tox-collection--list"
      role="menu"
    >
      <div
        class="tox-collection__group"
      >
        <div
          aria-checked="false"
          aria-disabled="false"
          aria-haspopup="false"
          class="tox-collection__item tox-collection__item--active"
          id=":id-0:"
          role="menuitemcheckbox"
          tabindex="-1"
        >
          <div
            class="tox-collection__item-label"
          >
            Inactive
          </div>
          <div
            class="tox-collection__item-checkmark"
          >
            <span
              class="tox-icon"
            >
              <svg
                id="checkmark"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
